[log.extension] remove deprecated usage
Signed-off-by: Raymond Augé <raymond.auge@liferay.com>